--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
               <h3>CREATING VIBRANT SPACES & COMMUNITES</h3>
               <p>
-                Our Team consists of hardworing and talented individuals that with</p>
+                Our Team consists of hardworking and talented individuals that with</p>
                 <p> 
                 Joel as captian and Nitha as vice captain</p>
                 <p>
